2003-08-05  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_texinfo_helper): Use the user definition
	of TEXINFO_TEX before checking for cygnus or AC_CONFIG_AUX_DIR.
	* tests/txinfo22.test: New file.
	* tests/Makefile.am (TESTS): Add txinfo22.test.
	Report from Tom Tromey.

2003-07-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>  (tiny change)

	* lib/depcomp (aix): Support AIX Compiler version 6.

2003-07-31  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.texi (A Shared Library): Rewrite and split into
	subsections.  Valuable comments from Norman Gray, Harlan Stenn,
	Tim Van Holder, and Guido Draheim.
	* tests/ltcond.test, tests/ltcond2.test, tests/ltconv.test: New files.
	* tests/Makefile.am (TESTS): Add them.

2003-07-30  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (handle_single_transform_list): Complain about
	foo.$(OBJEXT) being created both with libtool and without, not
	about foo.lo.
	Report from Tim Van Holder.

2003-07-29  Alexandre Duret-Lutz  <adl@gnu.org>

	* Makefile.am (FETCHFILES, fetch): Add config-ml.in and
	symlink-tree.
	* lib/config.sub, lib/config-ml.in, lib/texinfo.tex: New
	upstream versions.

2003-07-25  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/remake4.test: Use `$MAKE distdir' instead of `$MAKE dist' to
	avoid the use of tar.

2003-07-24  Alexandre Duret-Lutz  <adl@gnu.org>

	* tests/gnuwarn2.test: Typo.

	* tests/insthook.test: Use $MAKE, not make.

	Fix missing rebuilds during `make dist' with BSD make.
	* automake.in (generate_makefile): Do not push Makefile.in, and
	Makefile.am into DIST_COMMON here.
	* lib/am/configure.am (DIST_COMMON): Do it here, and use
	%MAKEFILE-AM% and %MAKEFILE-IN% so that items in DIST_COMMON
	actually match the targets.   Prefix `configure' with `$(srcdir)/'
	to match the target.
	* tests/remake4.test: New file.
	* tests/Makefile.am (TESTS): Add remake4.test.
	Report from Akim Demaille.

2003-07-23  Alexandre Duret-Lutz  <adl@gnu.org>
