@@ -128,13 +128,13 @@ test -f sub2/sub21/libsub21.la
 test -f sub2/sub22/libsub22.la
 $MAKE check
 test -f check-ok
-rm check-ok
+rm -f check-ok
 
 $MAKE install
 test -f lib/libtop.la
 $MAKE installcheck
 test -f installcheck-ok
-rm installcheck-ok
+rm -f installcheck-ok
 
 find empty -type f -print > empty.lst
 cat empty.lst
@@ -150,7 +150,7 @@ test ! -f ltconvtest
 
 $MAKE installcheck
 test -f installcheck-ok
-rm installcheck-ok
+rm -f installcheck-ok
 
 $MAKE uninstall
 find lib -type f -print > lib.lst
